--- a/employment-housing/Assignment2.ipynb
+++ b/employment-housing/Assignment2.ipynb
@@ -4160,7 +4160,7 @@
     }
    ],
    "source": [
-    "# Run the app\n",
+    "# Run the app at http://127.0.0.1:8052/ when running locally\n",
     "if __name__ == \"__main__\":\n",
     "    app.run_server(\n",
     "        debug=True,\n",
